# forge

./: .gitignore  README.md  pyproject.toml
.forge_demo/before/.forge/: state.json
.forge_demo/before/app/: data.py  legacy.py
.forge_demo/before/tests/: test_legacy.py
forge/: __init__.py  cli.py
forge/analysis/: __init__.py  analyzer.py  metrics.py  scanner.py
forge/core/: __init__.py  db.py  models.py
forge/executor/: __init__.py  executor.py  patcher.py  test_runner.py
forge/learning/: __init__.py  learner.py  patterns.py  success.py
forge/planner/: __init__.py  generator.py  planner.py  priority.py
forge/server/: app.py
forge/skills/: __init__.py  optimization.py  refactoring.py  security.py
forge/verifier/: __init__.py  rollback.py  safety.py  verifier.py
tests/: conftest.py  test_analysis.py  test_core.py  test_executor.py  test_integration.py  test_planner.py  test_verifier.py
