[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-evolver"
version = "0.1.0"
description = "Autonomous code evolution system for continuous codebase improvement."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
forge = "forge.cli:cli"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
